--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,7 +1,7 @@
 {
   "name" : "shine",
   "reason" : { "react-jsx" : 2},
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["reason-react", "bs-fetch", "bs-json" ],
   "sources": [
     {
       "dir": "src"
