--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bs-fetch": "github:buckletypes/bs-fetch",
+    "bs-json": "github:buckletypes/bs-json",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "reason-react": "0.1.4"
+    "reason-react": "0.1.4",
+    "bs-fetch" : "0.1.1",
+    "bs-json" : "0.1.0"
   },
   "devDependencies": {
     "bs-platform": "1.7.5",
     "webpack": "3.0.0",
-    "webpack-dev-server" : "2.5.0",
+    "webpack-dev-server": "2.5.0",
     "file-loader": "0.11.2",
     "html-minify-loader": "1.1.0"
   }
