--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,7 +4,8 @@
   "bs-dependencies": ["reason-react", "bs-fetch", "bs-json" ],
   "sources": [
     {
-      "dir": "src"
+      "dir": "src",
+      "subdirs": ["component"],
     }
   ],
 }
