--- a/package.json
+++ b/package.json
@@ -5,24 +5,23 @@
   "scripts": {
     "start": "bsb -make-world -w",
     "startW": "webpack-dev-server --port 8082 --inline --devtool source-map --content-base ./ -d",
-    "build": "webpack -w",
+    "build": "env NODE_ENV=production webpack",
     "clean": "bsb -clean-world"
   },
   "license": "MIT",
   "dependencies": {
-    "bs-fetch": "github:buckletypes/bs-fetch",
-    "bs-json": "github:buckletypes/bs-json",
+    "bs-fetch": "0.1.1",
+    "bs-json": "0.1.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "reason-react": "0.1.4",
-    "bs-fetch" : "0.1.1",
-    "bs-json" : "0.1.0"
+    "reason-react": "0.1.4"
   },
   "devDependencies": {
     "bs-platform": "1.7.5",
-    "webpack": "3.0.0",
-    "webpack-dev-server": "2.5.0",
     "file-loader": "0.11.2",
-    "html-minify-loader": "1.1.0"
+    "html-minify-loader": "1.1.0",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "2.5.0"
   }
 }
