--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
   "scripts": {
     "start": "bsb -make-world -w",
     "startW": "webpack-dev-server --port 8082 --inline --devtool source-map --content-base ./ -d",
-    "build": "bsb -make-world && env NODE_ENV=production webpack",
+    "build": "bsb -make-world && env NODE_ENV=production webpack && cp ./src/asset/* dist/",
     "clean": "bsb -clean-world"
   },
   "license": "MIT",
   "dependencies": {
     "bs-fetch": "0.1.1",
     "bs-json": "0.1.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "reason-react": "0.1.4"
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "reason-react": "0.1.5"
   },
   "devDependencies": {
-    "bs-platform": "1.7.5",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": " 6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-env": "1.5.2",
+    "bs-platform": "1.8.0",
+    "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
-    "html-minify-loader": "1.1.0",
+    "html-minify-loader": "1.3.0",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
     "webpack": "3.0.0",
     "webpack-dev-server": "2.5.0"
